# beer-review-dataserver

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml
migrations/: env.py
migrations/versions/: 1a239deca843_adding_breweries_table.py  4740f421ff34_adding_foreign_key.py  62978809cb4b_remove_null_foreign_key.py  92d085a27ca4_change_beer_score_to_float_and_add_.py  98fa3706f6b5_adding_datetime.py  a1256e5cd066_testing_alembic.py  ad5cf77edbe9_add_reveiws_table.py  c91a1351dfa9_add_beer_name_to_review.py  cec66407e4bb_adding_foreign_key.txt
src/app/: dependencies.py  main.py
src/app/models/: beers.py  common.py  reviews.py
src/app/routers/: beers.py  breweries.py  common.py  reviews.py
src/beer_review_dataserver/: __init__.py  config.py  dependencies.py  main.py
src/beer_review_dataserver/models/: __init__.py  beers.py  breweries.py  common.py  reviews.py
src/beer_review_dataserver/routers/: __init__.py  beers.py  breweries.py  common.py  reviews.py  types.py
